crates/macros/tests/regression/ui/public_model_bool_field.rs
use contour_macros::public_model;

#[public_model]
struct InvalidModel {
    enabled: bool,
}

fn main() {}
